# airflow-dags

./: .airflowignore  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  conftest.py  docker-compose-whisper.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt
.claude/: settings.local.json
.claude/agents/: dev.md
.github/workflows/: github_sync_main_development.yml
congreso_youtube/: congreso_dag.py  congreso_utils.py  congress_database.py  congressional_videos_schema.sql  postgres_operators.py  video_extraction.py  web_scraping.py  youtube_ai.py  youtube_upload.py  youtube_upload_dag.py
congress_videos/: CHUNKING_AUDIT_AND_IMPROVEMENTS.md  IDEMPOTENT_MONITOR_PLAN.md  SIMPLIFY_YOUTUBE_MONITOR.md  congress_processing_dag.py  reap_api.py  reap_clip_preparer_dag.py  reap_processor_dag.py  reap_shorts_dag.py  reap_shorts_uploader_dag.py  requirements.txt  srt_helpers.py  youtube_channel_monitor_dag.py  youtube_upload_dag.py  youtube_upload_dag_v2.py
congress_videos/config/: __init__.py  ai_prompts.py  constants.py  paths.py
congress_videos/modules/: __init__.py  database.py  file_operations.py  postgres_operators.py  speaker_helpers.py  utils.py  (+7 more)
docs/: ARCHITECTURE.md  DAGS.md  DEPLOYMENT_NAS.md  PLAN_GENERALIZACION_BEST_MOMENTS.md  README.md  YOUTUBE_SHORTS_LINKER_RESEARCH.md
example/: hello_weekly_dag.py  hello_world_dag.py
examples/: hello_weekly_dag.py  hello_world_dag.py  transcription_dag.py
git_sync/: .env.example  README.md  __init__.py  git_sync_dag.py
openspec/: config.yaml
tests/: __init__.py  conftest.py
utils/: ai_chapter_analyzer.py  ai_helpers.py  airflow_helpers.py  env_loader.py  git_sync_dag.py  llm_cache.py  migrations_dag.py  postgres_helpers.py  postgres_operators.py  time_utils.py  whisper_helpers.py  youtube_downloader.py  youtube_helpers.py  youtube_uploader_dag.py
(+74 files in other folders)
